Fixed wrong margin

--- a/core/content/themes/admin/style.css
+++ b/core/content/themes/admin/style.css
@@ -186,5 +186,5 @@ a:hover{
 .info .amount{
 	/*display: block;	*/
 	float: right;
-	margin-right: 50%;
+	margin-right: 20%;
 }
